--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -57,7 +57,7 @@ $color-institucional: #ff8f00
 $color-primario: #522981
 $color-secundario: #7DD3E9
 $color-acento-contenido: #B42218
-$color-acento-botones: #FFCD0D
+$color-acento-botones: #F9A825
 
 // Color Tipografias -----------------------------------
 $color-headers: $color-sistema-texto
@@ -68,7 +68,7 @@ $color-etiqueta-fondo: $color-primario
 $color-etiqueta-texto: $white
 
 //color Links ------------------------------------------
-$color-link: $color-primario
+$color-link: $color-sistema-texto
 $color-link-hover: darken($color-primario, 25%)
 
 // Color Botones ---------------------------------------
